<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yuhaiin</string>

    <string name="profile_title">Profile</string>
    <string name="profile_key">profile</string>
    <string name="prof_default">Default</string>

    <string name="yuhaiin">Yuhaiin</string>
    <string name="yuhaiin_running">Yuhaiin Running</string>
    <string name="yuhaiin_port_key">yuhaiin_port</string>
    <string name="yuhaiin_port_title">Yuhaiin Port</string>
    <string name="yuhaiin_host_summary">gRPC and HTTP listen port</string>
    <string name="open_yuhaiin_page">open_yuhaiin_page</string>

    <string name="connection">Connection</string>
    <string name="ports_key">ports_key</string>
    <string name="ports_title">Ports</string>
    <string name="http_server_port_key">http_server_port</string>
    <string name="http_server_port_title">HTTP Port</string>
    <string name="append_http_proxy_to_vpn_key">Append HTTP Proxy to VPN</string>
    <string name="append_http_proxy_to_vpn_title">Append HTTP Proxy to VPN</string>
    <string name="socks5_server_port_key">socks5_server_port</string>
    <string name="socks5_server_port_title">Socks5 Port</string>
    <string name="ipv6_proxy_key">ipv6</string>
    <string name="ipv6_proxy_title">IPv6</string>
    <string name="ipv6_proxy_sum">Enable IPv6 forwarding. If the server supports IPv6, you can access IPv6 contents from
        IPv4 network with this enabled.
    </string>
    <string name="network_speed_key">network_speed</string>
    <string name="network_speed_title">Network Speed</string>
    <string name="network_speed_sum">Show network speed in notification.</string>
    <string name="allow_lan_key">allow_lan</string>
    <string name="allow_lan_title">Allow Lan Connect</string>

    <string name="authentication">Authentication</string>
    <string name="auth_userpw_title">Username &amp; Password Authentication</string>
    <string name="auth_userpw_key">auth_userpw</string>
    <string name="auth_username_key">username</string>
    <string name="auth_password_key">password</string>
    <string name="auth_username_title">Username</string>
    <string name="auth_password_title">Password</string>

    <string name="advanced">Advanced</string>
    <string name="adv_route_Key">route</string>
    <string name="adv_route_title">Route</string>
    <string name="adv_route_all">All (Default)</string>
    <string name="adv_route_non_chn">Non-Chinese IPs</string>
    <string name="adv_route_non_local">Non-Local IPs</string>
    <string-array name="adv_routes">
        <item>@string/adv_route_all</item>
        <item>@string/adv_route_non_local</item>
        <item>@string/adv_route_non_chn</item>
    </string-array>

    <string name="bypass_tcp">TCP</string>
    <string name="bypass_udp">UDP</string>
    <string name="bypass_bypass">BYPASS</string>
    <string name="bypass_direct">DIRECT</string>
    <string name="bypass_proxy">PROXY</string>
    <string name="bypass_block">BLOCK</string>
    <string name="bypass_bypass_value">bypass</string>
    <string name="bypass_direct_value">direct</string>
    <string name="bypass_proxy_value">proxy</string>
    <string name="bypass_block_value">block</string>
    <string-array name="adv_bypass_mode">
        <item>@string/bypass_bypass</item>
        <item>@string/bypass_direct</item>
        <item>@string/bypass_proxy</item>
        <item>@string/bypass_block</item>
    </string-array>
    <string-array name="adv_bypass_mode_value">
        <item>@string/bypass_bypass_value</item>
        <item>@string/bypass_direct_value</item>
        <item>@string/bypass_proxy_value</item>
        <item>@string/bypass_block_value</item>
    </string-array>
    <string name="udp_proxy_fqdn">UDP proxy FQDN</string>
    <string name="sniff">Sniff</string>


    <string name="adv_dns_Key">dns</string>

    <string name="adv_fake_dns_cidr_key">fake_dns_cidr</string>
    <string name="adv_fake_dns_cidr_title">Fake DNS CIDR</string>
    <string name="adv_fake_dnsv6_cidr_key">fake_dnsv6_cidr</string>
    <string name="adv_fake_dnsv6_cidr_title">Fake DNSv6 CIDR</string>

    <string name="nav_dns_settings">DNS</string>
    <string name="adv_dns_port_key">dns_port</string>
    <string name="adv_dns_port_title">DNS Port</string>
    <string name="dns_hosts_key">hosts_key</string>
    <string name="dns_hosts_title">Hosts</string>
    <string name="dns_hosts_add_from">Add From</string>

    <string name="dns_hijacking">dns_hijacking</string>


    <string name="remote_dns_category_key">remote_dns_category</string>
    <string name="remote_dns_host_key">remote_dns_host</string>
    <string name="remote_dns_type_key">remote_dns_type</string>
    <string name="remote_dns_subnet_key">remote_dns_subnet</string>
    <string name="remote_dns_tls_server_name_key">remote_dns_tls_server_name</string>
    <string name="remote_dns_proxy_key">remote_dns_proxy</string>
    <string name="remote_dns_resolve_domain_key">remote_dns_resolve_domain</string>


    <string name="local_dns_host_key">local_dns_host</string>
    <string name="local_dns_type_key">local_dns_type</string>
    <string name="local_dns_subnet_key">local_dns_subnet</string>
    <string name="local_dns_tls_server_name_key">local_dns_tls_server_name</string>
    <string name="local_dns_proxy_key">local_dns_proxy</string>

    <string name="bootstrap_dns_host_key">bootstrap_dns_host</string>
    <string name="bootstrap_dns_type_key">bootstrap_dns_type</string>
    <string name="bootstrap_dns_subnet_key">bootstrap_dns_subnet</string>
    <string name="bootstrap_dns_tls_server_name_key">bootstrap_dns_tls_server_name</string>


    <string name="dns_type_doudp">DNS over UDP</string>
    <string name="dns_type_dotcp">DNS over TCP</string>
    <string name="dns_type_doh">DNS over HTTPS</string>
    <string name="dns_type_dot">DNS over TLS</string>
    <string name="dns_type_doq">DNS over QUIC</string>
    <string name="dns_type_doh3">DNS over HTTPS3</string>
    <string name="dns_type_doudp_value">udp</string>
    <string name="dns_type_dotcp_value">tcp</string>
    <string name="dns_type_doh_value">doh</string>
    <string name="dns_type_dot_value">dot</string>
    <string name="dns_type_doq_value">doq</string>
    <string name="dns_type_doh3_value">doh3</string>
    <string-array name="dns_types">
        <item>@string/dns_type_doudp</item>
        <item>@string/dns_type_dotcp</item>
        <item>@string/dns_type_doh</item>
        <item>@string/dns_type_dot</item>
        <item>@string/dns_type_doq</item>
        <item>@string/dns_type_doh3</item>
    </string-array>
    <string-array name="dns_types_value">
    <item>@string/dns_type_doudp_value</item>
    <item>@string/dns_type_dotcp_value</item>
    <item>@string/dns_type_doh_value</item>
    <item>@string/dns_type_dot_value</item>
    <item>@string/dns_type_doq_value</item>
    <item>@string/dns_type_doh3_value</item>
</string-array>


    <string name="dns_dns_hijacking_title">DNS Hijacking</string>
    <string name="dns_remote_title">Remote</string>
    <string name="dns_local_title">Local</string>
    <string name="dns_bootstrap_title">Bootstrap</string>
    <string name="dns_host_title">Host</string>
    <string name="dns_type_title">Type</string>
    <string name="dns_subnet_title">Subnet</string>
    <string name="dns_tls_server_name_title">TLS Server Name</string>
    <string name="dns_resolve_domain_title">Resolve Domain</string>

    <string name="adv_tun_driver_key">Tun Driver</string>
    <string name="adv_tun_driver_title">Tun Driver</string>
    <string name="tun_driver_fdbased">gVisor Fdbased</string>
    <string name="tun_driver_channel">gVisor Channel</string>
    <string name="tun_driver_system_gvisor">System</string>
    <string name="tun_driver_fdbased_value">fdbased</string>
    <string name="tun_driver_channel_value">channel</string>
    <string name="tun_driver_system_gvisor_value">system_gvisor</string>
    <string-array name="tun_drivers">
        <item>@string/tun_driver_fdbased</item>
        <item>@string/tun_driver_channel</item>
        <item>@string/tun_driver_system_gvisor</item>
    </string-array>
    <string-array name="tun_drivers_value">
    <item>@string/tun_driver_fdbased_value</item>
    <item>@string/tun_driver_channel_value</item>
    <item>@string/tun_driver_system_gvisor_value</item>
</string-array>

    <string name="adv_auto_connect_key">auto_connect</string>
    <string name="adv_auto_connect_title">Connect on Boot</string>

    <string name="adv_per_app_key">per_app</string>
    <string name="adv_per_app_title">Per-app Proxy</string>
    <string name="adv_app_bypass_key">app_bypass</string>
    <string name="adv_app_bypass_title">Bypass Mode</string>
    <string name="adv_app_bypass_sum">Enable this option to bypass selected apps instead of proxying them</string>
    <string name="adv_app_list_key">app_list</string>
    <string name="adv_new_app_list_key">new_app_list</string>
    <string name="adv_app_list_title">App List</string>
    <string name="adv_app_list_sum">Select apps to apply or bypass the proxy</string>

    <string name="prof_add">Add Profile</string>
    <string name="prof_del">Delete Profile</string>
    <string name="prof_del_confirm">Delete profile %s?</string>
    <string name="switch_main">Switch on / off the proxy</string>

    <string name="err_add_prof">Failed to add profile %s</string>
    <string name="err_del_prof">Error deleting profile %s</string>
    <string name="notify_msg">Connected to %s</string>
    <string name="channel_name">Proxy active</string>


    <string name="rule">Rule</string>
    <string name="new_rule">New Rule</string>
    <string name="rule_update_bypass_file">Rule Update Bypass</string>
    <string name="rule_update_bypass_file_title">Update Bypass</string>
    <string name="rule_block">Block</string>
    <string name="rule_proxy">Proxy</string>
    <string name="rule_direct">Direct</string>
    <string name="rule_block_title">Block</string>
    <string name="rule_proxy_title">Proxy</string>
    <string name="rule_direct_title">Direct</string>

    <string name="debug">Debug</string>
    <string name="logcat">Logcat</string>
    <string name="logcat_name">Logcat</string>
    <string name="save_logcat">save_logcat</string>
    <string name="save_logcat_name">Save Logcat</string>
    <string name="save_logcat_summary">Save logcat to
        Android/data/io.github.asutorufa.yuhaiin/files/yuhaiin/log.
    </string>

    <string name="log_level">Log Level</string>
    <string name="log_level_name">Log Level</string>
    <string name="log_level_verbose">verbose</string>
    <string name="log_level_debug">debug</string>
    <string name="log_level_info">info</string>
    <string name="log_level_warning">warning</string>
    <string name="log_level_error">error</string>
    <string name="log_level_fatal">fatal</string>
    <string-array name="log_levels">
        <item>@string/log_level_verbose</item>
        <item>@string/log_level_debug</item>
        <item>@string/log_level_info</item>
        <item>@string/log_level_warning</item>
        <item>@string/log_level_error</item>
        <item>@string/log_level_fatal</item>
    </string-array>
</resources>
