<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/profile_key"
        android:title="@string/profile_title"
        android:persistent="false"
        app:useSimpleSummaryProvider="true"
        android:icon="@drawable/person" />


    <PreferenceCategory
            android:title="@string/connection">

        <EditTextPreference
            android:icon="@drawable/vpn_lock"
            android:key="@string/yuhaiin_port_key"
            android:title="@string/yuhaiin_port_title"
            app:useSimpleSummaryProvider="true"
            android:summary="@string/yuhaiin_host_summary"
            android:singleLine="true" />

        <Preference
            android:title="Open Yuhaiin Page"
            android:key="@string/open_yuhaiin_page"
            android:singleLine="true"
            android:icon="@drawable/open_in_browser"
            />

        <EditTextPreference
            android:icon="@drawable/http"
            android:key="@string/http_server_port_key"
            android:title="@string/http_server_port_title"
            android:inputType="number"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true" />

        <EditTextPreference
            android:icon="@drawable/spoke"
            android:key="@string/socks5_server_port_key"
            android:title="@string/socks5_server_port_title"
            android:inputType="numberDecimal"
            android:digits="0123456789"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/lan"
            android:key="@string/allow_lan_key"
            android:title="@string/allow_lan_title"
            android:layout_height="match_parent" />

        <SwitchPreferenceCompat
            android:icon="@drawable/hub"
            android:key="@string/ipv6_proxy_key"
            android:title="@string/ipv6_proxy_title"
            android:summary="@string/ipv6_proxy_sum"
            android:layout_height="match_parent" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/authentication">

        <SwitchPreferenceCompat
            android:icon="@drawable/authenticator"
            android:key="@string/auth_userpw_key"
            android:title="@string/auth_userpw_title" />

        <EditTextPreference
            android:key="@string/auth_username_key"
            android:title="@string/auth_username_title"
            android:icon="@drawable/face"
            android:dependency="@string/auth_userpw_key"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true" />

        <EditTextPreference
            android:key="@string/auth_password_key"
            android:title="@string/auth_password_title"
            android:icon="@drawable/password"
            android:inputType="textPassword"
            android:dependency="@string/auth_userpw_key"
            app:useSimpleSummaryProvider="true"
            android:singleLine="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advanced">

        <Preference
            android:title="DNS"
            android:icon="@drawable/dns"
            android:summary="DNS Port, Fake DNS, Remote DNS, Local DNS,Bootstrap DNS"
            android:key="@string/adv_dns_Key" />

        <DropDownPreference
            android:icon="@drawable/router"
            android:key="@string/adv_route_Key"
            android:title="@string/adv_route_title"
            android:entries="@array/adv_routes"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/adv_routes" />


        <SwitchPreferenceCompat
            android:icon="@drawable/auto_mode"
            android:key="@string/adv_auto_connect_key"
            android:title="@string/adv_auto_connect_title" />

        <SwitchPreferenceCompat
            android:key="@string/adv_per_app_key"
            android:icon="@drawable/settop_component"
            android:title="@string/adv_per_app_title" />

        <SwitchPreferenceCompat
            android:key="@string/adv_app_bypass_key"
            android:icon="@drawable/alt_route"
            android:title="@string/adv_app_bypass_title"
            android:summary="@string/adv_app_bypass_sum"
            android:dependency="@string/adv_per_app_key" />

        <MultiSelectListPreference
            android:key="@string/adv_app_list_key"
            android:icon="@drawable/apps"
            android:title="@string/adv_app_list_title"
            android:summary="@string/adv_app_list_sum"
            android:dependency="@string/adv_per_app_key" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Rule">
        <EditTextPreference
            android:key="@string/rule_direct"
            android:title="@string/rule_direct"
            android:icon="@drawable/unblock_flipped"
            app:useSimpleSummaryProvider="true"
            android:singleLine="false" />
        <EditTextPreference
            android:key="@string/rule_proxy"
            android:title="@string/rule_proxy"
            android:icon="@drawable/vpn_key"
            app:useSimpleSummaryProvider="true"
            android:singleLine="false" />
        <EditTextPreference
            android:key="@string/rule_block"
            android:title="@string/rule_block"
            android:icon="@drawable/block"
            app:useSimpleSummaryProvider="true"
            android:singleLine="false" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/debug">

        <SwitchPreferenceCompat
            android:icon="@drawable/save"
            android:key="@string/save_logcat"
            android:title="@string/save_logcat_name"
            android:summary="@string/save_logcat_summary" />

        <Preference
            android:icon="@drawable/adb"
            android:key="@string/logcat"
            android:title="@string/logcat"
            android:singleLine="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
