<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/adv_dns_port_key"
        android:title="@string/adv_dns_port_title"
        android:inputType="number"
        android:digits="0123456789"
        app:useSimpleSummaryProvider="true"
        android:singleLine="true" />

    <Preference
        android:title="@string/dns_hosts_title"
        android:key="@string/dns_hosts_key" />
    
    <EditTextPreference
        android:key="@string/adv_fake_dns_cidr_key"
        android:title="@string/adv_fake_dns_cidr_title"
        app:useSimpleSummaryProvider="true"
        android:singleLine="true" />

    <EditTextPreference
        android:key="@string/adv_fake_dnsv6_cidr_key"
        android:title="@string/adv_fake_dnsv6_cidr_title"
        app:useSimpleSummaryProvider="true"
        android:singleLine="true" />

    <SwitchPreferenceCompat
        android:title="@string/dns_dns_hijacking_title"
        android:key="@string/dns_hijacking" />

    <PreferenceCategory
        android:title="@string/dns_remote_title"
        android:icon="@drawable/dns">

        <EditTextPreference
            android:title="@string/dns_host_title"
            android:singleLine="true"
            android:key="@string/remote_dns_host_key"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:title="@string/dns_type_title"
            android:entries="@array/dns_types"
            android:key="@string/remote_dns_type_key"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/dns_types" />
        <EditTextPreference
            android:title="@string/dns_subnet_title"
            android:singleLine="true"
            android:key="@string/remote_dns_subnet_key"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:title="@string/dns_tls_server_name_title"
            android:singleLine="true"
            android:key="@string/remote_dns_tls_server_name_key"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:title="@string/dns_resolve_domain_title"
            android:key="@string/remote_dns_resolve_domain_key"
            android:summary="Resolve Proxy Domain By Remote DNS instead of Pass Domain to Proxy" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dns_local_title"
        android:icon="@drawable/dns">

        <EditTextPreference
            android:title="@string/dns_host_title"
            android:singleLine="true"
            android:key="@string/local_dns_host_key"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:title="@string/dns_type_title"
            android:entries="@array/dns_types"
            app:useSimpleSummaryProvider="true"
            android:key="@string/local_dns_type_key"
            android:entryValues="@array/dns_types" />
        <EditTextPreference
            android:title="@string/dns_subnet_title"
            android:singleLine="true"
            android:key="@string/local_dns_subnet_key"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:title="@string/dns_tls_server_name_title"
            android:singleLine="true"
            android:key="@string/local_dns_tls_server_name_key"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dns_bootstrap_title"
        android:icon="@drawable/dns">
        <EditTextPreference
            android:title="@string/dns_host_title"
            android:key="@string/bootstrap_dns_host_key"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:title="@string/dns_type_title"
            android:key="@string/bootstrap_dns_type_key"
            android:entries="@array/dns_types"
            app:useSimpleSummaryProvider="true"
            android:entryValues="@array/dns_types" />
        <EditTextPreference
            android:title="@string/dns_subnet_title"
            android:key="@string/bootstrap_dns_subnet_key"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:title="@string/dns_tls_server_name_title"
            android:key="@string/bootstrap_dns_tls_server_name_key"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</androidx.preference.PreferenceScreen>
