<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="Update Bypass"
        android:key="@string/rule_update_bypass_file"
        app:useSimpleSummaryProvider="true"
        android:singleLine="true"/>

    <EditTextPreference
        android:key="@string/rule_direct"
        android:title="@string/rule_direct"
        android:icon="@drawable/unblock_flipped"
        app:useSimpleSummaryProvider="true"
        android:singleLine="false" />
    <EditTextPreference
        android:key="@string/rule_proxy"
        android:title="@string/rule_proxy"
        android:icon="@drawable/vpn_key"
        app:useSimpleSummaryProvider="true"
        android:singleLine="false" />
    <EditTextPreference
        android:key="@string/rule_block"
        android:title="@string/rule_block"
        android:icon="@drawable/block"
        app:useSimpleSummaryProvider="true"
        android:singleLine="false" />
</androidx.preference.PreferenceScreen>